<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_"
        android:icon="@drawable/ic_search_chat"
        android:title="@string/action_bar_search"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_contact"
        android:title="Contact"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_notifications"
        android:title="Notification"
        app:showAsAction="always" />



    <item
        android:id="@+id/action_start_settings"
        android:title="@string/action_bar_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_start_invite_friends"
        android:title="@string/action_bar_invite_friends"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/action_start_feedback"
        android:title="@string/action_bar_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_web_qr_code"
        android:title="@string/action_bar_web_qr_code"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_start_about"
        android:title="@string/action_bar_about"
        app:showAsAction="never" />

</menu>