<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_tabs_chat_otu"
        android:title="@string/chats" />

    <item
        android:id="@+id/navigation_call"
        android:icon="@drawable/ic_tabs_call_otu"
        android:title="@string/call" />

    <item
        android:id="@+id/navigation_payment"
        android:icon="@drawable/ic_tabs_payment_otu"
        android:title="@string/payment" />

<<<<<<< HEAD

=======
   <!-- <item
        android:id="@+id/navigation_pengaturan"
        android:visible="false"
        android:icon="@drawable/ic_otu_pengaturan"
        android:title="@string/setting" />-->
>>>>>>> 98ec7323b604b24ea4af934e918e2b49186ff6ed

</menu>
