<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:padding="@dimen/density_16"
    android:orientation="vertical">
    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:baselineAligned="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="128"
                tools:text="000" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_textinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/auth_hint_password"
                android:inputType="textPassword"
                android:maxLength="256"
                tools:text="111" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/remember_me_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/auth_remember_me"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/login_email_button"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/selector_button_green_oval"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/auth_login_title"
            android:textStyle="bold"
            android:textColor="@color/text_white"
            android:textSize="@dimen/landing_button_text_size"
            />

        <TextView
            style="@style/TextViewLinkStyle.Dark"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:text="@string/auth_or_text"
            android:textSize="@dimen/text_size_small" />

        <RelativeLayout
            android:id="@+id/facebook_connect_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/landing_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_button_connect_facebook">

            <TextView
                style="@style/TextViewDrawableStyle.White"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:textAllCaps="true"
                android:background="@null"
                android:drawableLeft="@drawable/ic_fb_white"
                android:text="@string/auth_log_in_with_facebook"
                android:textSize="@dimen/landing_button_text_size"/>

        </RelativeLayout>

        <TextView
            style="@style/TextViewLinkStyle.Dark"
            android:id="@+id/forgot_password_textview"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:text="@string/auth_forgot_password"
            android:textSize="@dimen/text_size_small" />

    </LinearLayout>

</LinearLayout>