<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/density_16">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo_otu" />

    <TextView
        android:id="@+id/labels_imageview"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/account_exist"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />


    <Button
        android:id="@+id/phone_number_connect_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/density_16"
        android:layout_marginTop="@dimen/density_16"
        android:background="@drawable/custom_round"
        android:drawableEnd="@drawable/ic_next"
        android:drawableLeft="@drawable/ic_login"
        android:drawableRight="@drawable/ic_next"
        android:drawableStart="@drawable/ic_login"
        android:text="@string/auth_login_title"
        android:textStyle="bold"
        android:visibility="gone"/>


    <!--<LinearLayout-->
    <!--android:id="@+id/lay_atau"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <TextView
        android:id="@+id/lbl_atau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/or"
        android:visibility="gone"
        android:textColor="@color/cardview_light_background"
        android:textSize="@dimen/text_16"
        android:textStyle="bold" />

    <!--</LinearLayout>-->

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/density_16"
        android:background="@drawable/custom_round"
        android:drawableEnd="@drawable/ic_next"
        android:drawableLeft="@drawable/ic_signup"
        android:drawableRight="@drawable/ic_next"
        android:drawableStart="@drawable/ic_signup"
        android:text="@string/auth_login_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/app_version_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/density_8"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_12" />

    <Button
        android:id="@+id/login"
        android:layout_marginTop="@dimen/density_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_round"
        android:drawableEnd="@drawable/ic_next"
        android:drawableLeft="@drawable/ic_login"
        android:drawableRight="@drawable/ic_next"
        android:drawableStart="@drawable/ic_login"
        android:onClick="phoneLogin"
        android:text="@string/auth_login_title"
        android:textAllCaps="true"
        android:textStyle="bold"  />

    <Button
        android:id="@+id/logout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#ff9900"
        android:onClick="logout"
        android:text="Logout"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:visibility="gone" />

</LinearLayout>